--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,3 +16,86 @@ body {
   font-family: var(--font-secondary);
 }
 
+/* Icons */
+
+.logoicon {
+  height: 135px;
+  width: 135px;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+.nav-list .logoicon {
+  height: 125px;
+  width: 125px;
+  margin-bottom: 10px;
+}
+
+.design-nav-toggle:hover .logoicon,
+.marketing-nav-toggle:hover .logoicon,
+.development-nav-toggle:hover .logoicon,
+.consulting-nav-toggle:hover .logoicon, 
+.portfolio-nav-toggle:hover .logoicon,
+.resume-nav-toggle:hover .logoicon,
+.linkedin-nav-toggle:hover .logoicon,
+.contact-nav-toggle:hover .logoicon {
+  transform: scale(1.2);
+  transition: var(--transition50-50);
+}
+
+
+.designlogo {
+  background-image: url(/images/gallery/icons/ui/linkedin-icon-512x512-dhkaf9ri.png);
+}
+
+.marketinglogo {
+  background-image: url(/images/gallery/icons/UI/marketing.svg);
+}
+
+.developmentlogo {
+  background-image: url(/images/gallery/icons/UI/develop.svg);
+}
+
+.consultinglogo {
+  background-image: url(/images/gallery/icons/UI/consult.svg);
+}
+
+.portfoliologo {
+  background-image: url(/images/gallery/icons/UI/portfolio.svg);
+}
+
+.resumelogo {
+  background-image: url(/images/gallery/icons/UI/resume.svg);
+}
+
+.linkedin {
+  background-image: url(/images/gallery/icons/socialmedia/Linkedin.svg);
+}
+
+.contactlogo {
+  background-image: url(/images/gallery/icons/UI/contact.svg);
+}
+
+.photoshop {
+  background-image: url(/images/gallery/icons/programs/Adobe/wrl/Photoshop.svg);
+}
+
+.lightroom {
+  background-image: url(/images/gallery/icons/programs/Adobe/wrl/lightroom.svg);
+}
+.indesign {
+  background-image: url(/images/gallery/icons/programs/Adobe/wrl/indesign.svg);
+}
+.illustrator {
+  background-image: url(/images/gallery/icons/programs/Adobe/wrl/illustrator.svg);
+}
+.aftereffects {
+  background-image: url(/images/gallery/icons/programs/Adobe/wrl/aftereffects.svg);
+}
+.premierepro {
+  background-image: url(/images/gallery/icons/programs/Adobe/wrl/premierepro.svg);
+}
+.acrobat {
+  background-image: url(/images/gallery/icons/programs/Adobe/wrl/acrobat.svg);
+}
