--- a/styles/style.css
+++ b/styles/style.css
@@ -1144,7 +1144,7 @@ html body ul li {
 
 
 .designlogo {
-  background-image: url(/images/gallery/icons/ui/linkedin-icon-512x512-dhkaf9ri.png);
+  background-image: url(/images/gallery/icons/UI/design.svg);
 }
 
 .marketinglogo {
