--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,9 +17,6 @@ h6 {
   font-family: var(--font-primary);
 }
 
-html, body {
-  height: 100%;
-}
 
 body {
   font-family: var(--font-secondary);
@@ -33,7 +30,9 @@ body {
 }
 
 main {
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media screen (max-width: 1000px) {
