--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 @tailwind variants;
 
 :root {
-  --body: 1000px;
+  --body: 1400px;
   --main: var(--secondary100);
   --secondary: rgba(255,255,255, 1);
   --secondary05: rgba(255,255,255, 0.05);
@@ -273,4 +273,39 @@ nav:hover ~ main {
 .transform {
   transform: rotate(90deg);
   transform-origin: center;
+}
+
+/* --- Post Page ---*/
+
+.desc-height {
+  height: 150px;
+}
+
+.post-nav-flex-box {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 1rem;
+}
+
+.post-flex-line {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: flex-end;
+}
+
+.post-title-flex {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
+}
+
+.prev .post-title-flex, .prev .post-flex-line {
+  flex-flow: row-reverse;
+}
+
+.prev .switcher {
+  display: none;
 }
